--- a/next/package.json
+++ b/next/package.json
@@ -8,16 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.6",
+    "antd": "^4.9.4",
+    "dayjs": "^1.9.7",
+    "graphql": "^15.4.0",
+    "lodash": "^4.17.20",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "recoil": "^0.1.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
+    "@zeit/next-sass": "^1.0.1",
+    "antd-dayjs-webpack-plugin": "^1.0.1",
     "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^7.15.0",
@@ -34,6 +42,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-unicorn": "^23.0.0",
     "eslint-tinker": "^0.5.0",
+    "node-sass": "^5.0.0",
     "typescript": "^4.1.2"
   }
 }
