--- a/docker/server/DockerFile
+++ b/docker/server/DockerFile
@@ -1,4 +1,4 @@
-FROM goland:1.14
+FROM golang:1.14
 
 
 RUN go env -w GO111MODULE=on
@@ -12,8 +12,9 @@ WORKDIR /usr/src/server
 
 COPY ./server /usr/src/server
 
-RUN go build main.go
+
+RUN go build --ldflags "-extldflags -static"
 
 EXPOSE 8000
 
-ENTRYPOINT [ "./server" ]
+ENTRYPOINT ["/usr/src/server/doing"]
