--- a/next/package.json
+++ b/next/package.json
@@ -16,6 +16,7 @@
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-markdown": "^6.0.2",
     "recoil": "^0.1.2"
   },
   "devDependencies": {
